syntax = "proto3";

option go_package = "github.com/tdv/go-care/examples/greeter/proto/api";

package api;

service GreeterService {
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

message SayHelloRequest {
  string name = 1;
}

message SayHelloResponse {
  string greeting = 1;
}